about and discover started

--- a/discover.html
+++ b/discover.html
@@ -13,12 +13,9 @@
 
     <title>Stemen4u</title>
 </head>
-<body class="video-container d-flex"> 
+<body> 
 
-        
    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-
-   <img src="gallery/windmill.jpg" alt="windmill-image" class="events-main">
 
    <header>
             <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start">
@@ -32,9 +29,13 @@
             </nav>
     </header>
 
-    <main class="events-title">
-         <h1>Discover <span style = "display: block;">Our Events </span></h1>
+    <main class="discover">
+        <p>Disover more about us</p>
+         <h1>Our Poeple</h1>
+         <h1>Our Events</h1>
      </main>
+
+     <img src="gallery/robot.png" alt="robot" width="400" height="400">
 
 <!--Boostrap Bundle with Popper-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
