--- a/discover.html
+++ b/discover.html
@@ -30,12 +30,33 @@
     </header>
 
     <main class="discover">
-        <p>Disover more about us</p>
-         <h1>Our Poeple</h1>
-         <h1>Our Events</h1>
+        <div class="row">
+            <div class="col-sm-12">
+                 <p>Disover more about us</p>
+            </div>
+        </div>
+
+        <div class="row">
+                <h1 class="discover-people">Our Poeple 
+                    <a class="btn" href="events.html" role="button"><u>discover</u></a>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+                  </svg>
+                </h1> 
+        </div>
+        
+
+        <div class="row">
+                <h1 class="discover-events">Our Events  
+                    <a class="btn" href="events.html" role="button"><u>discover</u></a>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+                  </svg>
+                </h1>
+        </div>
      </main>
 
-     <img src="gallery/robot.png" alt="robot" width="400" height="400">
+     <img src="gallery/robot.png" alt="robot" width="400" height="400" class="robot">
 
 <!--Boostrap Bundle with Popper-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
