--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
     <title>STEM4enU</title>
 </head>
-    <body class="video-container d-flex text-center">
+    <body class="d-flex text-center">
     
         <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
