--- a/events.html
+++ b/events.html
@@ -13,7 +13,7 @@
 
     <title>Stemen4u</title>
 </head>
-<body class="video-container d-flex"> 
+<body class="d-flex"> 
 
         
    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
