--- a/discover.html
+++ b/discover.html
@@ -19,13 +19,13 @@
 
    <header>
             <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start">
-   
+            
             <nav class="nav nav-masthead justify-content-center float-md-end">
-                <a class="nav-link active" href="#">Home</a>
-                <a class="nav-link" href="#">Events</a>
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="events.html">Events</a>
+                <a class="nav-link" href="about.html">About</a>
                 <a class="nav-link" href="#">Meet the team</a>
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
             </nav>
     </header>
 
