--- a/events.html
+++ b/events.html
@@ -32,10 +32,67 @@
             </nav>
     </header>
 
-    <main class="events-title">
+    <main class="events-main">
          <h1>Discover <span style = "display: block;">Our Events </span></h1>
-     </main>
 
+     <div class="event-body">
+        <div class="event-card">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row no-gutters">
+                <div class="card-title col-md-4">
+                    <p>Digital Data & Privacy</p>
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <a class="btn" href="contact.html" role="button">Book Now</a>
+                </div>
+            </div>
+            </div>
+        </div>
+
+        <div class="event-card">
+            <div class="card mb-3" style="max-width: 540px;">
+               <div class="row no-gutters">
+                 <div class="card-title col-md-4">
+                   <p>Digital Data & Privacy</p>
+                 </div>
+                 <div class="col-md-8">
+                   <div class="card-body">
+                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                 </div>
+               </div>
+               <div class="row">
+                    <a class="btn" href="contact.html" role="button">Book Now</a>
+             </div>
+             </div>
+           </div>
+        </div>
+
+   
+
+        <div class="event-card">
+            <div class="card mb-3" style="max-width: 540px;">
+               <div class="row no-gutters">
+                 <div class="card-title col-md-4">
+                   <p>Digital Data & Privacy</p>
+                 </div>
+                 <div class="col-md-8">
+                   <div class="card-body">
+                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                 </div>
+               </div>
+               <div class="row">
+                    <a class="btn" href="contact.html" role="button">Book Now</a>
+                </div>
+             </div>
+           </div>
+        </div>
+    </div>
+    </main>
 <!--Boostrap Bundle with Popper-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
