--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </nav>
         </header>
   
-        <main class="px-5">
+        <main class="main-title">
              <h1>STEM4enU</h1>
          </main>
 
