--- a/discover.html
+++ b/discover.html
@@ -31,36 +31,38 @@
 
     <main class="discover">
         <div class="row">
-            <div class="col-sm-12">
-                 <p>Disover more about us</p>
+            <div class="col-md-12">
+                <p>Disover more about us</p>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-sm-12">
-                <h1 class="discover-people"><span class="pretty-underline">Our Poeple</span>
-                    <a class="btn" href="events.html" role="button"><u>discover</u>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/></a>
-                  </svg>
-                </h1> 
-            </div>
-        </div>
-        
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="discover-people"><span class="pretty-underline">Our Poeple</span>
+                        <a class="discover-btn" href="events.html" role="button"><u>discover</u>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/></a>
+                    </svg>
+                    </h1>
+                </div>
+             </div>
 
-        <div class="row">
-            <div class="col-sm-12">
-                <h1 class="discover-events"><span class="pretty-underline">Our Events</span>
-                    <a class="btn" href="events.html" role="button"><u>discover</u>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/></a>
-                  </svg>
-                </h1>
+             <div class="row">
+                <div class="col-md-12">
+                    <h1 class="discover-events"><span class="pretty-underline">Our Events</span>
+                        <a class="discover-btn" href="events.html" role="button"><u>discover</u>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/></a>
+                    </svg>
+                    </h1>
+                </div>
             </div>
-        </div>
-     </main>
 
-     <img src="gallery/robot.png" alt="robot" width="400" height="400" class="robot">
+            <img src="gallery/robot.png" alt="robot" width="400" height="400" class="robot">
+    </main>
+</div>
+
+ 
 
 <!--Boostrap Bundle with Popper-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
