--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
                     </div>
                     <div class="row text4">
                         <p>“Our platform is in alignment with the Scottish Attainment Challenge, the National Improvement Framework and the Getting it right for every child (GIRFEC) scheme.”</p>
-                        <a class="btn" href="discover.html" role="button">Discover more</br>
+                        <a class="about-btn" href="discover.html" role="button">Discover more</br>
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#E30641" class="bi bi-chevron-down" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
                           </svg></a>
@@ -83,9 +83,11 @@
                 </div>
             </main>
      
+            <!--
               <footer class="mt-auto text-center">
                   <p>Edinburgh Napier University</p>
               </footer>
+            -->
          </div>
 
 
