--- a/events.html
+++ b/events.html
@@ -23,13 +23,20 @@
     <header>
         <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start">
 
-        <nav class="nav nav-masthead justify-content-center float-md-end">
-            <a class="nav-link" href="index.html">Home</a>
-            <a class="nav-link" href="events.html">Events</a>
-            <a class="nav-link" href="about.html">About</a>
-            <a class="nav-link" href="#">Meet the team</a>
-            <a class="nav-link" href="contact.html">Contact</a>
-        </nav>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                  <a class="nav-link" data-value="home" href="index.html">Home</a></li>
+              <li class="nav-item">
+                  <a class="nav-link" data-value="about us" href="about.html">About Us</a></li>
+               <li class="nav-item">
+                  <a class="nav-link" data-value="coffee shop" href="events.html">Events</a></li>
+               <li class="nav-item">
+                  <a class="nav-link" data-value="bee keeping course" href="#">Meet the team</a></li>
+               <li class="nav-item">
+                  <a class="nav-link" data-value="shop" href="contact.html">Contact</a></li>
+              </ul>
+          </div>
     </header>
 
     <h1>Discover <span style = "display: block;">Our Events </span></h1>
