--- a/events.html
+++ b/events.html
@@ -23,18 +23,18 @@
     <header>
         <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start">
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse float-md-end" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
+              <li class="nav-item">
                   <a class="nav-link" data-value="home" href="index.html">Home</a></li>
               <li class="nav-item">
                   <a class="nav-link" data-value="about us" href="about.html">About Us</a></li>
                <li class="nav-item">
-                  <a class="nav-link" data-value="coffee shop" href="events.html">Events</a></li>
+                  <a class="nav-link" data-value="events" href="events.html">Events</a></li>
                <li class="nav-item">
-                  <a class="nav-link" data-value="bee keeping course" href="#">Meet the team</a></li>
+                  <a class="nav-link" data-value="meet the team" href="#">Meet the team</a></li>
                <li class="nav-item">
-                  <a class="nav-link" data-value="shop" href="contact.html">Contact</a></li>
+                  <a class="nav-link" data-value="contact" href="contact.html">Contact</a></li>
               </ul>
           </div>
     </header>
