--- a/events.html
+++ b/events.html
@@ -23,20 +23,13 @@
     <header>
         <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start">
 
-        <div class="collapse navbar-collapse float-md-end" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                  <a class="nav-link" data-value="home" href="index.html">Home</a></li>
-              <li class="nav-item">
-                  <a class="nav-link" data-value="about us" href="about.html">About Us</a></li>
-               <li class="nav-item">
-                  <a class="nav-link" data-value="events" href="events.html">Events</a></li>
-               <li class="nav-item">
-                  <a class="nav-link" data-value="meet the team" href="#">Meet the team</a></li>
-               <li class="nav-item">
-                  <a class="nav-link" data-value="contact" href="contact.html">Contact</a></li>
-              </ul>
-          </div>
+        <nav class="nav nav-masthead justify-content-center float-md-end">
+            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="events.html">Events</a>
+            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="#">Meet the team</a>
+            <a class="nav-link" href="contact.html">Contact</a>
+        </nav>
     </header>
 
     <h1>Discover <span style = "display: block;">Our Events </span></h1>
