--- a/team.html
+++ b/team.html
@@ -19,17 +19,17 @@
          <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start">
      </header>
  
-     <h1>Meet <span style = "display: block;">Our Team</span></h1>
+     <h1 class="team-header">Meet <span style = "display: block;">Our Team</span></h1>
    </div>
 
     <main class="events-main">
     
         <!--Our events -->
-        <div class="container-events">
+        <div class="container-teams">
  
        <div class="row">
          <div class="col-12">
-           <h5 class="intro-events">Meet our dedicated team</h5>
+           <h5 class="intro-teams">Meet our dedicated team</h5>
          </div>
        </div>
              
