--- a/discover.html
+++ b/discover.html
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <h1 class="discover-people"><span class="pretty-underline">Our Poeple</span>
-                        <a class="discover-btn" href="events.html" role="button"><u>discover</u>
+                        <a class="discover-btn" href="team.html" role="button"><u>discover</u>
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/></a>
                     </svg>
