--- a/events.html
+++ b/events.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
 
-    <h1>Discover <span style = "display: block;">Our Events </span></h1>
+    <h1 class="event-title">Roadmap to the<span style = "display: block;">future of STEM</span></h1>
   </div>
 
     <main class="events-main">
@@ -40,9 +40,14 @@
        <!--Our events -->
        <div class="container-events">
 
-      <div class="row">
+      <div class="row intro-events">
         <div class="col-12">
-          <h5 class="intro-events">Our Stem Events for Schools</h5>
+          <h5 class="intro-events">Your future, your STEM!</h5>
+          <div class="intro-details">
+            <h4>6 - 10 June 2022</h4>
+            <p>Daily from 9:30 am to 2:45 pm</p>
+            <p>New S4 pupils, Sign Up NOW!</p>
+          </div>
         </div>
       </div>
             
@@ -52,10 +57,18 @@
         <div class="row no-gutters">
             <div class="col-sm-6">
                 <div class="card-body">
-                    <h5 class="card-title">Digital & Privacy</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse exercitationem possimus saepe dolorem eum minima officiis tempore, minus nihil quibusdam architecto provident, deserunt, quo sunt sed vel incidunt dolorum debitis. 
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse exercitationem possimus saepe dolorem eum minima officiis tempore, minus nihil quibusdam architecto provident, deserunt, quo sunt sed vel incidunt dolorum debitis.</p>
-                </div>
+                    <h5 class="card-title">Artificial Intelligence in operations research</h5>
+                    <p class="card-text">
+                        Each day Computer Science solves many problems that improve our lives and supports society. 
+                        One of the most challenging areas is that of deliveries, ensuring that goods and services are delivered quickly and efficiently. 
+                        This workshop introduces you to one of the fundamental problems in computer science, the Travelling Salesperson Problem. 
+                        Although simple to understand, the problem is deceptively complex to solve. Using a problem based on the center of Edinburgh, we begin by trying to solve our problem manually. 
+                        We then investigate how a simple rule called a Heuristic can help us solve the problem. Finally we use a simple Artificial Intelligence algorithm to help us find a solution quickly. 
+                        Even if you've never written any programme code before you will find this an interesting introduction to computer science. 
+                        We'll be using the Python language and data from Open Street map so you'll be working with tools used by Computer Science students and professionals.
+                    </p>
+                    <button type="button" class="btn btn-outline-danger"><a href="contact.html">Sign Up Now</a></button>
+                 </div>
             </div>
             <div class="col-sm-6">
                 <img src="gallery/robot1.jpg" class="card-img-top" alt="about">
@@ -74,10 +87,14 @@
             </div>
             <div class="col-sm-6">
                 <div class="card-body2">
-                    <h5 class="card-title">Cyber Security & Digital Forensics</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, eum harum facere cum ullam esse ipsa dicta, officia impedit nihil neque ea? Impedit, ex asperiores delectus quo est illum sequi.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse exercitationem possimus saepe dolorem eum minima officiis tempore, minus nihil quibusdam architecto provident, deserunt, quo sunt sed vel incidunt dolorum debitis.
+                    <h5 class="card-title">Information and feedback systems for decision making</h5>
+                    <p class="card-text">
+                        We made decisions all the time. Information is a key to make informed decisions. 
+                        This workshop will introduce you to how previous decisions affect future outcomes, sometimes with delayed responses. 
+                        We will introduce you to the role and impact of feedback. You will participate in building simple models and see the results of your decisions on various aspects of social and business entities, such as population growth, business profits, and growth of customer numbers. 
+                        The model will enable you to explore likely future outputs based on current decisions.
                     </p>
+                    <button type="button" class="btn btn-outline-danger"><a href="contact.html">Sign Up Now</a></button>
                 </div>
             </div>
         </div>
@@ -92,10 +109,13 @@
             <div class="row no-gutters">
                 <div class="col-sm-6">
                     <div class="card-body">
-                        <h5 class="card-title">Games Development</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit rerum recusandae beatae tenetur esse, in obcaecati quam? Totam repudiandae expedita amet optio! Dolor obcaecati perferendis fuga modi! Aliquam, similique rerum. 
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse exercitationem possimus saepe dolorem eum minima officiis tempore, minus nihil quibusdam architecto provident, deserunt, quo sunt sed vel incidunt dolorum debitis.
+                        <h5 class="card-title">Exploring the Future Energy Landscape</h5>
+                        <p class="card-text">
+                            We are running out of energy sources. Our conventional supplies of energy from Natural Gas, Oil and Coal are depleting and we need to stop using these anyway to save the world from global warming. 
+                            What are we going to do without the supply of energy? Is this the end of the growth of modern civilization? Let’s have a look into the future energy landscape where renewable energy sources like Solar, Wind, Hydro, Nuclear, geothermal and Hydrogen cells will govern the energy supply. 
+                            They are known to be green energy. Are they? Let’s explore it together.  
                         </p>
+                        <button type="button" class="btn btn-outline-danger"><a href="contact.html">Sign Up Now</a></button>
                     </div>
                 </div>
                 <div class="col-sm-6">
@@ -116,10 +136,15 @@
             </div>
             <div class="col-sm-6">
                 <div class="card-body2">
-                    <h5 class="card-title">Circuits Playground</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi officiis impedit rem ad quod provident omnis, ab esse voluptatum. Temporibus odio possimus ullam odit aperiam itaque quas voluptatibus ab sed.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse exercitationem possimus saepe dolorem eum minima officiis tempore, minus nihil quibusdam architecto provident, deserunt, quo sunt sed vel incidunt dolorum debitis.
+                    <h5 class="card-title">Reinforcement Learning based Intelligent learning for training robots</h5>
+                    <p class="card-text">
+                        Reinforcement learning (RL), as a research paradigm, concerns not only trial-and-error learning without a model of the environment, but also deliberative planning with a model that can present the dynamics of the environment.
+                        Often robots can be re-trained with changes made to their environment using a reinforcement learning method. 
+                        In this workshop, we are going to explore reinforcement learning based training algorithm to allow a robot to walk again after losing one of its legs. 
+                        Four training strategies will be provided for students to explore. The simulation environment is based on Unity game platform and those algorithms performance will be evaluated by students who observe those actions and compared with researcher developed evaluation metrics. 
+                        This allows students to have first-hand experience of state-of-art reinforcement learning algorithms.
                     </p>
+                    <button type="button" class="btn btn-outline-danger"><a href="contact.html">Sign Up Now</a></button>
                 </div>
             </div>
         </div>
@@ -132,9 +157,11 @@
       <p>Edinburgh Napier University</p>
     </footer>
     </main>
+
 <!--Boostrap Bundle with Popper-->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </body>
 </html>
