--- a/events.html
+++ b/events.html
@@ -38,15 +38,17 @@
     <main class="events-main">
     
        <!--Our events -->
-       <div class="container-events">
+<div class="container-events">
 
       <div class="row intro-events">
         <div class="col-12">
           <h5 class="intro-events">Your future, your STEM!</h5>
           <div class="intro-details">
             <h4>6 - 10 June 2022</h4>
+            <p>New S4 pupils will engage in activities designed to promote collaborative learning, creative thinking, problem solving and communication skills.</p>
+            <p>All activities are aligned with Curriculum for Excellence.</p>
             <p>Daily from 9:30 am to 2:45 pm</p>
-            <p>New S4 pupils, Sign Up NOW!</p>
+            <p>Lunch will be provided.</p>
           </div>
         </div>
       </div>
@@ -71,7 +73,7 @@
                  </div>
             </div>
             <div class="col-sm-6">
-                <img src="gallery/robot1.jpg" class="card-img-top" alt="about">
+                <img src="gallery/coding.png" class="card-img-top" alt="about">
             </div>
         </div>
     </div>
@@ -83,7 +85,7 @@
     <div class="event2">  
         <div class="row no-gutters">
             <div class="col-sm-6">
-                <img src="gallery/solarpanels.jpg" class="card-img-top" alt="about2">
+                <img src="gallery/info-seeking.png" class="card-img-top" alt="about2">
             </div>
             <div class="col-sm-6">
                 <div class="card-body2">
@@ -119,7 +121,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <img src="gallery/carcharger.jpg" class="card-img-top" alt="about3">
+                    <img src="gallery/solarpanels.jpg" class="card-img-top" alt="about3">
                 </div>
             </div>
         </div>
@@ -132,7 +134,7 @@
     <div class="event4">
         <div class="row no-gutters">
             <div class="col-sm-6">
-                <img src="gallery/wind2.jpg" class="card-img-top" alt="about4">
+                <img src="gallery/robot1.jpg" class="card-img-top" alt="about4">
             </div>
             <div class="col-sm-6">
                 <div class="card-body2">
