--- a/events.html
+++ b/events.html
@@ -21,16 +21,13 @@
    <img src="gallery/windmill.jpg" alt="windmill-image" class="events-main">
 
     <header>
-        <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start">
-
-        <nav class="nav nav-masthead justify-content-center float-md-end">
-            <a class="nav-link" href="index.html">Home</a>
-            <a class="nav-link" href="events.html">Events</a>
-            <a class="nav-link" href="about.html">About</a>
-            <a class="nav-link" href="#">Meet the team</a>
-            <a class="nav-link" href="contact.html">Contact</a>
-        </nav>
+        <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start"> 
     </header>
+
+    <a href="index.html">Home</a> 
+    <a href="events.html">Events</a>
+    <a href="team.html">Meet the team</a>
+    <a href="contact.html">Contact</a>
 
     <h1 class="event-title">Roadmap to the<span style = "display: block;">future of STEM</span></h1>
   </div>
