--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,8 @@
                     <div class="row justify justify-content-center">
                         <div class="col-11 col-md-8 col-lg-6 col-xl-5">
                             <form name="contact" method="POST" data-netlify="true">
+                                <input type="hidden" name="subject" 
+                                value="Inquiry from stem4enu.netlify.app" />
                                 <div class="card">
                                     <div class="row mt-0">
                                         <div class="col-md-12 ">
